--- a/partials/panels/section-10.twig
+++ b/partials/panels/section-10.twig
@@ -1,6 +1,6 @@
 {% set eventsCount = 0 %}
 {% set cardIndex = 0 %}
-{% set events = _Event.getEvents({'limit' : 3, 'offset' : 0, 'upcomingDate': currentDate}) %}
+{% set events = _Event.getEvents({'limit' : 4, 'offset' : 0, 'upcomingDate': currentDate}) %}
 
 <div class="row" data-section="10">
     <div class="col-12">
@@ -11,19 +11,21 @@
         </div>
     </div>
 </div>
-
 <div class="row">
     <div class="col">
         <div class="c-cards-container c-cards-container-xs">
             <div class="row">
-                {% for i in 0..3 if events[eventsCount] %}
-                    <div class="col-12 col-lg-3 left-border">
-                        {{this.render('../_single-event-list.twig', {
-                            event: events[i], 
-                            imageSuppress: 'true',
-                            containerClass: "event-card-3-mobile event-card-3-tablet event-card-3-desktop"
-                        }) | raw}}
-                    </div>
+                {% for i in 0..3 %}
+                    {% if events[i] is defined %}
+                        <div class="col-12 col-lg-3 left-border">
+                            
+                            {{this.render('../_single-event-list.twig', {
+                                event: events[i], 
+                                imageSuppress: 'true',
+                                containerClass: "event-card-3-mobile event-card-3-tablet event-card-3-desktop"
+                            }) | raw}}
+                        </div>
+                    {% endif %}
                 {% endfor %}
             </div>
         </div>
