--- a/partials/_single-event-list.twig
+++ b/partials/_single-event-list.twig
@@ -95,9 +95,7 @@
                 <span class="c-eventcards-view__date-label">{{startMonth}}</span>
             </div>
             {% if event.media[0].path is defined and event.media[0].path is not empty  %}
-                <div class="c-eventcards-view__conditionalImage">
-                    <img src={{event.media[0].path}} />
-                </div>
+                <div class="c-eventcards-view__conditionalImage"></div>
             {% endif %}
             <div class="c-eventcards-view__container">
                 <div class="c-eventcards-view__info">
