--- a/section.twig
+++ b/section.twig
@@ -202,6 +202,7 @@
             model           : Acme.Card,
             container       : 'loadmore_section',
             offset          : {{limit}},
+            infinite        : true,
             limit           : 12,
             label           : "Load more",
             name            : 'section-load',
