infinity scroll true

--- a/section-digital.twig
+++ b/section-digital.twig
@@ -102,6 +102,7 @@
             model           : Acme.Card,
             container       : 'loadmore_section',
             offset          : {{limit}},
+            infinite        : true,
             limit           : 12,
             label           : "Load more",
             name            : 'section-load',
