--- a/section-realestate.twig
+++ b/section-realestate.twig
@@ -146,6 +146,7 @@
             model           : Acme.Card,
             container       : 'loadmore_section',
             offset          : {{limit}},
+            infinite        : true,
             limit           : 12,
             label           : "Load more",
             name            : 'section-load',
