--- a/layouts/partials/header/_header.twig
+++ b/layouts/partials/header/_header.twig
@@ -61,7 +61,7 @@
                         {% else %}
                         <div class="c-navigation-4 c-navigation-4--inverse c-navigation-4-xs  d-flex d-sm-none">
                             <a id="signinBtn" href="javascript:;" class="c-navigation__item">Log in</a>
-                            <a href="{{networkData.defaultBlogUrl}}/subscriptions#subscriptions"
+                            <a href="{{networkData.defaultBlogUrl}}/subscriptions"
                                 class="c-navigation__item c-navigation__item--borderred subscribe">Subscribe</a>
                         </div>
                         {% endif %}
